Fix Stripe payment links - remove Patreon URL prefix

--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
     <p class="subtitle">Monthly mythic creatures. Patron-driven lore. Your story becomes legend.</p>
     
     <div class="cta-container">
-      <a href="https://www.patreon.com/https://buy.stripe.com/test_6oE7uF1Xk0aydti3cd" class="btn-primary" target="_blank">Enter the Basilica →</a>
+      <a href="https://buy.stripe.com/test_6oE7uF1Xk0aydti3cd" class="btn-primary" target="_blank">Enter the Basilica →</a>
     </div>
   </section>
 
@@ -476,7 +476,7 @@
 
   <!-- Secondary CTA -->
   <div style="text-align: center; margin: 4rem 0;">
-    <a href="https://www.patreon.com/https://buy.stripe.com/test_6oE7uF1Xk0aydti3cd" class="btn-secondary" target="_blank">Become a Founding Patron</a>
+    <a href="https://buy.stripe.com/test_6oE7uF1Xk0aydti3cd" class="btn-secondary" target="_blank">Become a Founding Patron</a>
   </div>
 
   <!-- Trinity Teaser -->
